--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^9.0.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@react-three/postprocessing": "^3.0.4",
+    "pixel-retroui": "^2.1.0",
+    "postprocessing": "^6.38.0",
+    "react": "^19.2.2",
+    "react-dom": "^19.2.2",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
@@ -20,6 +25,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
+    "baseline-browser-mapping": "^2.9.6",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
