--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -14,11 +14,13 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@react-three/postprocessing": "^3.0.4",
+    "@tailwindcss/vite": "^4.1.18",
     "pixel-retroui": "^2.1.0",
     "postprocessing": "^6.38.0",
     "react": "^19.2.2",
     "react-dom": "^19.2.2",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
@@ -31,5 +33,10 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "vite": "^7.1.6"
-  }
+  },
+  "description": "",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
